my-apps/arr-stack/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app: sonarr
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: "Application requires root for PUID/PGID mapping at startup"
    ignore-check.kube-linter.io/no-read-only-root-fs: "Legacy application requires writeable root for internal updates/logging"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
      annotations:
        backup.velero.io/backup-volumes-excludes: media-root,appdata
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20.3014-ls327
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: media-root
              mountPath: /media
            - name: appdata
              mountPath: /config
              subPath: appdata/linuxserver-sonarr-2/config
      volumes:
        - name: media-root
          persistentVolumeClaim:
            claimName: pvc-media-library
        - name: appdata
          persistentVolumeClaim:
            claimName: pvc-appdata
